# ShazamIO

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: auto-black.yml  build.yml  codeql.yml  pytest.yml  test2.yml
ShazamIO/: __init__.py  algorithm.py  api.py  client.py  converter.py  exceptions.py  factory.py  misc.py  models.py  signature.py  typehints.py  utils.py
data/: city.json
examples/: about_artist.py  about_track.py  album_info.py  artist_albums.py  proxy.py  recognize_and_get_album.py  recognize_song.py  recognize_track_youtube.py  related_tracks.py  search_artists.py  search_tracks.py  song_listening_counter.py  top_artist_tracks.py  top_tracks_city.py  top_tracks_country.py  top_tracks_genre_country.py  top_tracks_genre_world.py  top_world_tracks.py
shazamio/: __init__.py  algorithm.py  api.py  client.py  converter.py  enums.py  exceptions.py  factory.py  factory_misc.py  loggers.py  misc.py  models.py  serializers.py  signature.py  typehints.py  user_agent.py  utils.py
shazamio/deprecated/: decorator.py
shazamio/interfaces/: client.py
shazamio/schemas/: album.py  artists.py  attributes.py  base.py  content_version.py  enums.py  errors.py  models.py  photos.py  play_params.py  urls.py
shazamio/schemas/artist/views/: full_albums.py  last_release.py  simular_artists.py  top_music.py  top_song.py
shazamio/schemas/playlist/: playlist.py
tests/: conftest.py  test_21_issue.py  test_about_artist.py  test_get_next_signature.py  test_peak_spreading_numpy.py  test_recognize.py
