[tool.poetry]
name = "shazamio"
version = "0.0.3"
description = "Is a asynchronous framework from reverse engineered Shazam API written in Python 3.6+ with asyncio and aiohttp."
authors = ["dotX12"]
license = "MIT License"
keywords = ["python", "shazam", "music", "recognize", "api", "async", "asyncio", "aiohttp", "identification"]
readme = "README.md"
homepage = "https://github.com/dotX12/ShazamIO"
repository = "https://github.com/dotX12/ShazamIO"
include = [
    "README.md",
    "LICENSE.txt"
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.20.1"
aiohttp = "^3.7.4"
pydub = "^0.24.1"
dataclass-factory = "^2.10.1"
aiofiles = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel>=0.36,<1.0", "poetry>=1.1,<2", "virtualenv==20.0.33"]
build-backend = "poetry.core.masonry.api"
