[tool.poetry]
name = "shazamio"
version = "0.6.0"
description = "Is a asynchronous framework from reverse engineered Shazam API written in Python 3.8+ with asyncio and aiohttp."
authors = ["dotX12"]
license = "MIT License"
keywords = ["python", "shazam", "music", "recognize", "api", "async", "asyncio", "aiohttp", "identification"]
readme = "README.md"
homepage = "https://github.com/dotX12/ShazamIO"
repository = "https://github.com/dotX12/ShazamIO"
include = [
    "README.md",
    "LICENSE.txt"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
aiohttp = "^3.8.3"
pydub = "^0.25.1"
dataclass-factory = "2.16"
aiofiles = "23.2.1"
anyio = "4.3.0"
pydantic = "^2.2.1,<2.6"
shazamio-core = "^1.0.7"
aiohttp-retry = "^2.8.3"

[tool.poetry.dev-dependencies]
black = {version = "^24.2.0", allow-prereleases = true}
pytest = "8.1.2"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel>=0.36,<1.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-scoped"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]


[tool.black]
line-length = 100
